frontend/web/css/site.css
/* ... */
.all-banners-center .slick-dots li:hover{
	color: #03a7d4;
	opacity: 1;
	background: #dbdbdb;
}

.all-banners-center .slick-dots li:before{
	content: "";
	position: absolute;
	top: -8px;
	left: 0;
	border-width: 0 14px 8px;
	border-style: solid;
}

.all-banners-center .slick-dots li.slick-active:before, .all-banners-center .slick-dots li.slick-active:hover:before{
	border-color: transparent transparent #03a7d4;
}

.all-banners-center .slick-dots li:before{
	border-color: transparent transparent #000;
}

.all-banners-center .slick-dots li:hover:before{
	border-color: transparent transparent #dbdbdb;
}

.all-banners-center .slick-dots li.slick-active, .all-banners-center .slick-dots li.slick-active:hover{
	cursor: default;
	opacity: 1;
	color: #fff;
	background: #03a7d4;
}

.advantages{
	overflow: hidden;
	height: auto;
	margin-top: 15px;
	text-align: center;
}

.advantages ul{
	display: inline-block;
	width: 100%;
}

.advantages li{
	float: left;
	position: relative;
	text-transform: uppercase;
	font-size: 14px;
	color: #4f4f4f;
}

.advantages li div{
	display: table;
	height: 100%;
}

.advantages li span{
	display: table-cell;
	width: 130px;
	-webkit-animation-duration: 1s;
	animation-duration: 1s;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
}

.advantages li:before{
	position: absolute;
	top: 25px;
}

.advantages #label{
	width: 380px;
	background: url("/img/site/text.png") no-repeat scroll 0% 50% transparent;
}

.advantages #opt:before{
	content: url("/img/site/opt.png");
}

.advantages #disc:before{
	content: url("/img/site/discount.png");
}

.advantages #minorder:before{
	content: url("/img/site/minorder.png");
}

.advantages #ret:before{
	content: url("/img/site/ret.png");
}

.sender{
	padding: 10px 0;
	text-align: center;
	border-top: 1px dashed #cacaca;
}

.sender a{
	font-size: 16px;
	color: #4f4f4f;
	padding-right: 60px;
}

.sender a:hover, .sender a:active{
	color: #03a7d4;
}

.info{
	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.5) inset;
	background: url('/img/site/slide_info_bg.png') repeat;
	padding: 4px 0px;
}

.info .slick-slider{
	margin: 0;
	padding-top: 80px;
}

.info .slick-slide{
	height: ;
}

.info .slick-dots{
	top: 15px;
	bottom: auto;
}

.info .slick-dots li{
	width: auto;
	height: auto;
	font-family: OpenSans-LightItalic;
	font-size: 22px;
	margin: 0 25px;
	padding: 5px 50px;
	color: #4f4f4f;
	cursor: pointer;
}

.info .slick-dots li span{
	border-bottom: 1px dashed #4f4f4f;
}

.info .slick-dots .slick-active{
	color: #fff;
	background: #03a7d4;
	border-radius: 20px;
	cursor: default;
}

.info .slick-dots .slick-active span{
	border-bottom: none;
}

.info .article, .info .review, .info .question-answer{
	width: 33.33%;
	height: 290px;
	float:left;
	position: relative;
	padding: 0 20px;
	font-size: 12px;
}

.info .articles:after, .info .reviews:after, .info .questions:after{
	content: '';
	display: table;
	clear: both;
}

.question .question-label{
	color: #C09530;
	padding-top: 10px;
	font-size: 1.4em;
}

.answer .answer-label{
	color: #1795ca;
	padding-top: 10px;
	font-size: 1.4em;
}

.question .question-date, .review .review-date, .answer .answer-date{
	font-size: 1em;
	color: #a1a1a1;
}

.question .question-msg, .answer .answer-msg{
	font-family: OpenSans-Italic;
	font-size: 1em;
}

.question .question-msg:before, .answer .answer-msg:before{
	content: '';
	width: 13px;
	height: 10px;
	float: left;
	margin-right: 7px;
	background: url("/img/site/quotes.png") no-repeat;
}

.review{
	font-size: 12px;
}

.review .additional-data{
	height: 100px;
}

.review .user-name{
	color: #03a7d4;
	font-size: 1.5em;
}

.review .user-occupation{
	color: #03a7d4;
	font-size: 1.1em;
}

.review .review-message{
	height: 190px;
	line-height: 1.7em;
	overflow: hidden;
	font-size: 1.1em;
	position: relative;
}

.review .review-message:after{
	content: '';
	position: absolute;
	right: 0px;
	left: 0px;
	bottom: 0px;
	height: 60px;
	display: block;
	background: transparent linear-gradient(rgba(243, 243, 243, 0) 0%, #F3F3F3 90%) repeat scroll 0% 0%;
}

/*==============* ITEM STYLE *================*/

.hovered{
	width: 270px;
	max-height: 370px;
	position: relative;
	margin-bottom: 30px;
	float: left;
}

.items-grid .item{
	width: 100%;
	height: auto;
	background: #fff;
	position: relative;
	padding: 15px 20px 20px;
	border-radius: 5px;
	border: 1px solid #d9e8ef;
}

.hovered:hover .item{
	box-shadow: 0 3px 10px #516d89;
	border: 1px solid #bfd1e3;
	z-index: 3;
	background: rgba(255,255,255,0.9);
}

.hovered:hover .item .inner-sub{
	display: block;
}

.hovered:not(:nth-child(3n - 3)){
	margin-right: 30px;
}

.item .inner-main{
	height: 333px;
	position: relative;
}

.item .inner-sub{
	width: 100%;
	height: auto;
	position: relative;
	display: none;
}

.item .item-head{
	margin-bottom: 10px;
	line-height: 23px;
}

.item .item-wish{
	cursor: pointer;
	white-space: nowrap;
	line-height: normal;
}

.items-grid .item-wish{
	width: 20px;
	overflow: hidden;
	float: left;
	-webkit-transition: all 0.3s ease-in-out 0s;
	-moz-transition: all 0.3s ease-in-out 0s;
	-ms-transition: all 0.3s ease-in-out 0s;
	-o-transition: all 0.3s ease-in-out 0s;
	transition: all 0.3s ease-in-out 0s;
}

.items-grid .item-wish:hover{
	width: 120px;
}

.item .icon-heart:before{
	font-size: 20px;
	vertical-align: middle;
	margin-right: 5px;
	display: inline-block;
}

.item .item-code{
	float: right;
}

.item .item-img{
	display: block;
	margin: 0 auto 10px;
}

.item .item-title{
	max-height: 60px;
	overflow: hidden;
	text-align: center;
}

.item .price-block{
	position: absolute;
	bottom: 0;
	width: 100%;
	display: table;
	text-transform: uppercase;
}

.item .price-block > div{
	display: table-cell;
	vertical-align: middle;
}

.items-grid .price-list{
	text-align: left;
}

.item .button-block{
	text-align: right;
}

.items-grid .wholesale-price{
	font-size: 18px;
	font-family: OpenSans-Bold;
}

.item .old-wholesale-price{
	position: relative;
	font-size: 13px;
	display: inline-block;
}
/* ... */

